--- a/app/src/main/res/layout/activity_drug_information.xml
+++ b/app/src/main/res/layout/activity_drug_information.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_dark"
-    tools:context=".DrugInformationActivity">
+    tools:context=".information.DrugInformationActivity">
 
     <TextView
         android:id="@+id/text_drug_information"
